--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "mcamara/laravel-localization": "^1.8",
         "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
